--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "child-allowance-tracker"
 version = "0.1.0"
 description = "Child allowance tracking app"
 readme = "README.md"
-requires-python = ">=3.12"  # Changed from 3.13
+requires-python = ">=3.12"  # Changed from 3.13 for compatibility
 dependencies = [
     "flask>=2.3.0",
     "google-auth>=2.22.0",
@@ -12,7 +12,7 @@ dependencies = [
     "google-api-python-client>=2.95.0",
     "gspread>=5.10.0",
     "python-dotenv>=1.0.0",
-    "awsgi>=0.2.7",
+    "awsgi",
     "boto3>=1.28.0",
     "pydantic>=2.0.0",
 ]
@@ -20,6 +20,9 @@ dependencies = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src"]
 
 [tool.uv]
 dev-dependencies = [
