--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,18 +68,114 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
+      - name: Check if Lambda execution role exists
+        run: |
+          if ! aws iam get-role --role-name lambda-execution-role 2>/dev/null; then
+            echo "Creating Lambda execution role..."
+
+            # Create trust policy
+            cat > trust-policy.json << EOF
+          {
+            "Version": "2012-10-17",
+            "Statement": [
+              {
+                "Effect": "Allow",
+                "Principal": {
+                  "Service": "lambda.amazonaws.com"
+                },
+                "Action": "sts:AssumeRole"
+              }
+            ]
+          }
+          EOF
+
+            # Create the role
+            aws iam create-role \
+              --role-name lambda-execution-role \
+              --assume-role-policy-document file://trust-policy.json
+
+            # Attach basic execution policy
+            aws iam attach-role-policy \
+              --role-name lambda-execution-role \
+              --policy-arn arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+
+            # Create and attach DynamoDB policy
+            cat > dynamodb-policy.json << EOF
+          {
+            "Version": "2012-10-17",
+            "Statement": [
+              {
+                "Effect": "Allow",
+                "Action": [
+                  "dynamodb:GetItem",
+                  "dynamodb:PutItem",
+                  "dynamodb:UpdateItem",
+                  "dynamodb:DeleteItem",
+                  "dynamodb:Query",
+                  "dynamodb:Scan"
+                ],
+                "Resource": "arn:aws:dynamodb:us-east-1:960311492155:table/allowance-data-*"
+              }
+            ]
+          }
+          EOF
+
+            aws iam put-role-policy \
+              --role-name lambda-execution-role \
+              --policy-name DynamoDBAccess \
+              --policy-document file://dynamodb-policy.json
+
+            echo "Waiting for role to be available..."
+            sleep 10
+          else
+            echo "Lambda execution role already exists"
+          fi
+
       - name: Deploy to Lambda
         run: |
-          aws lambda update-function-code \
-            --function-name child-allowance-tracker \
-            --zip-file fileb://deployment.zip
+          # Check if function exists
+          if ! aws lambda get-function --function-name child-allowance-tracker 2>/dev/null; then
+            echo "Creating Lambda function..."
+            aws lambda create-function \
+              --function-name child-allowance-tracker \
+              --runtime python3.12 \
+              --role arn:aws:iam::960311492155:role/lambda-execution-role \
+              --handler lambda_function.lambda_handler \
+              --zip-file fileb://deployment.zip \
+              --timeout 30 \
+              --memory-size 256 \
+              --environment Variables='{
+                "GOOGLE_SHEETS_ID":"${{ secrets.GOOGLE_SHEETS_ID }}",
+                "GOOGLE_SERVICE_ACCOUNT_JSON":"${{ secrets.GOOGLE_SERVICE_ACCOUNT_KEY }}",
+                "AUTHORIZED_EMAILS":"${{ secrets.AUTHORIZED_EMAILS }}",
+                "DYNAMODB_TABLE":"allowance-data-production",
+                "LOG_LEVEL":"INFO"
+              }'
 
-          aws lambda update-function-configuration \
-            --function-name child-allowance-tracker \
-            --environment Variables='{
-              "GOOGLE_SHEETS_ID":"${{ secrets.GOOGLE_SHEETS_ID }}",
-              "GOOGLE_SERVICE_ACCOUNT_JSON":"${{ secrets.GOOGLE_SERVICE_ACCOUNT_KEY }}",
-              "AUTHORIZED_EMAILS":"${{ secrets.AUTHORIZED_EMAILS }}",
-              "DYNAMODB_TABLE":"allowance-data-production",
-              "LOG_LEVEL":"INFO"
-            }'
+            echo "Creating function URL..."
+            aws lambda create-function-url-config \
+              --function-name child-allowance-tracker \
+              --cors AllowCredentials=false,AllowHeaders="*",AllowMethods="*",AllowOrigins="*" \
+              --auth-type NONE || true
+
+          else
+            echo "Updating existing Lambda function..."
+            aws lambda update-function-code \
+              --function-name child-allowance-tracker \
+              --zip-file fileb://deployment.zip
+
+            aws lambda update-function-configuration \
+              --function-name child-allowance-tracker \
+              --environment Variables='{
+                "GOOGLE_SHEETS_ID":"${{ secrets.GOOGLE_SHEETS_ID }}",
+                "GOOGLE_SERVICE_ACCOUNT_JSON":"${{ secrets.GOOGLE_SERVICE_ACCOUNT_KEY }}",
+                "AUTHORIZED_EMAILS":"${{ secrets.AUTHORIZED_EMAILS }}",
+                "DYNAMODB_TABLE":"allowance-data-production",
+                "LOG_LEVEL":"INFO"
+              }'
+          fi
+
+      - name: Get Function URL
+        run: |
+          URL=$(aws lambda get-function-url-config --function-name child-allowance-tracker --query 'FunctionUrl' --output text 2>/dev/null || echo "No URL configured")
+          echo "Function URL: $URL"
