--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -131,21 +131,11 @@ jobs:
             echo "Lambda execution role already exists"
           fi
 
-      - name: Create environment variables JSON
-        run: |
-          cat > env-vars.json << EOF
-          {
-            "Variables": {
-              "GOOGLE_SHEETS_ID": "${{ secrets.GOOGLE_SHEETS_ID }}",
-              "GOOGLE_SERVICE_ACCOUNT_JSON": "${{ secrets.GOOGLE_SERVICE_ACCOUNT_KEY }}",
-              "AUTHORIZED_EMAILS": "${{ secrets.AUTHORIZED_EMAILS }}",
-              "DYNAMODB_TABLE": "allowance-data-production",
-              "LOG_LEVEL": "INFO"
-            }
-          }
-          EOF
-
       - name: Deploy to Lambda
+        env:
+          GOOGLE_SHEETS_ID: ${{ secrets.GOOGLE_SHEETS_ID }}
+          GOOGLE_SERVICE_ACCOUNT_JSON: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_KEY }}
+          AUTHORIZED_EMAILS: ${{ secrets.AUTHORIZED_EMAILS }}
         run: |
           # Check if function exists
           if ! aws lambda get-function --function-name child-allowance-tracker 2>/dev/null; then
@@ -158,7 +148,7 @@ jobs:
               --zip-file fileb://deployment.zip \
               --timeout 30 \
               --memory-size 256 \
-              --environment file://env-vars.json
+              --environment Variables="{GOOGLE_SHEETS_ID=${GOOGLE_SHEETS_ID},GOOGLE_SERVICE_ACCOUNT_JSON=${GOOGLE_SERVICE_ACCOUNT_JSON},AUTHORIZED_EMAILS=${AUTHORIZED_EMAILS},DYNAMODB_TABLE=allowance-data-production,LOG_LEVEL=INFO}"
 
             echo "Creating function URL..."
             aws lambda create-function-url-config \
@@ -174,7 +164,7 @@ jobs:
 
             aws lambda update-function-configuration \
               --function-name child-allowance-tracker \
-              --environment file://env-vars.json
+              --environment Variables="{GOOGLE_SHEETS_ID=${GOOGLE_SHEETS_ID},GOOGLE_SERVICE_ACCOUNT_JSON=${GOOGLE_SERVICE_ACCOUNT_JSON},AUTHORIZED_EMAILS=${AUTHORIZED_EMAILS},DYNAMODB_TABLE=allowance-data-production,LOG_LEVEL=INFO}"
           fi
 
       - name: Get Function URL
