--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,34 @@ jobs:
       - name: Set up Python
         run: uv python install 3.12
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - name: Create environment variables JSON
+        env:
+          GOOGLE_SHEETS_ID: ${{ secrets.GOOGLE_SHEETS_ID }}
+          GOOGLE_SERVICE_ACCOUNT_JSON: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_KEY }}
+          AUTHORIZED_EMAILS: ${{ secrets.AUTHORIZED_EMAILS }}
+        run: |
+          # Create environment variables JSON file
+          jq -n \
+            --arg sheets_id "$GOOGLE_SHEETS_ID" \
+            --arg service_account "$GOOGLE_SERVICE_ACCOUNT_JSON" \
+            --arg emails "$AUTHORIZED_EMAILS" \
+            '{
+              Variables: {
+                GOOGLE_SHEETS_ID: $sheets_id,
+                GOOGLE_SERVICE_ACCOUNT_JSON: $service_account,
+                AUTHORIZED_EMAILS: $emails,
+                DYNAMODB_TABLE: "allowance-data-production",
+                LOG_LEVEL: "INFO"
+              }
+            }' > env-vars.json
+
       - name: Create deployment package
         run: |
           mkdir deployment
