added pytest to dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "google-api-python-client>=2.88.0",
     "python-dotenv>=1.0.0",
     "uvicorn[standard]>=0.24.0",
+    "pytest>=8.4.0"
 ]
 
 [project.optional-dependencies]
